[package]
name = "snaplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snaplink"
path = "src/bin/main.rs"

[dependencies]
progenitor-client = { path="../progenitor/progenitor-client" }
reqwest = "0.11.10"
serde = { version="^1.0", features=["derive"] }
serde_json = "1.0.81"

[build-dependencies]
progenitor = { path = "../progenitor/progenitor" }
serde_json = "1.0.81"
