[package]
name = "snaplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snaplink"
path = "src/bin/main.rs"

[dependencies]
async-trait = "^0.1"
axum = "^0.5"
progenitor-client = "^0.1"
reqwest = "^0.11"
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.18", features=["rt", "rt-multi-thread", "macros"] }
tracing = "^0.1"
tracing-subscriber = { version="^0.3", features=["registry", "std", "env-filter"] }
ulid = { version="^0.5", features=["serde"] }

[build-dependencies]
#progenitor = { path = "../progenitor/progenitor" }
progenitor = "^0.1"
serde_json = "^1.0"
